--- a/App/requirements.txt
+++ b/App/requirements.txt
@@ -1,169 +1,12 @@
-absl-py==1.1.0
-altair==4.2.0
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-asttokens==2.0.5
-astunparse==1.6.3
-attrs==21.4.0
-backcall==0.2.0
-beautifulsoup4==4.11.1
-bleach==5.0.1
-blinker==1.4
-cachetools==5.2.0
-certifi==2022.6.15
-cffi==1.15.1
-charset-normalizer==2.1.0
-click==8.1.3
-click-plugins==1.1.1
-cligj==0.7.2
-colorama==0.4.5
-commonmark==0.9.1
-cycler==0.11.0
-debugpy==1.6.2
-decorator==5.1.1
-defusedxml==0.7.1
-distlib==0.3.5
-docopt==0.6.2
-eli5==0.13.0
-entrypoints==0.4
-executing==0.8.3
 fastjsonschema==2.16.1
-filelock==3.7.1
-Fiona @ file:///C:/Users/Unknown/pipwin/Fiona-1.8.21-cp310-cp310-win_amd64.whl
-Flask==2.1.3
-flatbuffers==1.12
-fonttools==4.34.4
-gast==0.4.0
-GDAL @ file:///C:/Users/Unknown/pipwin/GDAL-3.4.3-cp310-cp310-win_amd64.whl
-geopandas==0.11.1
-gitdb==4.0.9
-GitPython==3.1.27
-google-auth==2.9.1
-google-auth-oauthlib==0.4.6
-google-pasta==0.2.0
-graphviz==0.20
-grpcio==1.47.0
-h5py==3.7.0
-idna==3.3
-importlib-metadata==4.12.0
-ipykernel==6.15.1
-ipython==8.4.0
-ipython-genutils==0.2.0
-ipywidgets==7.7.1
-itsdangerous==2.1.2
-jedi==0.18.1
-Jinja2==3.1.2
 joblib==1.1.0
-Js2Py==0.71
 jsonschema==4.7.2
-jupyter==1.0.0
-jupyter-client==7.3.4
-jupyter-console==6.4.4
-jupyter-core==4.11.1
-jupyterlab-pygments==0.2.2
-jupyterlab-widgets==1.1.1
-keras==2.9.0
-Keras-Preprocessing==1.1.2
-kiwisolver==1.4.4
-libclang==14.0.1
-lightgbm==3.3.2
-lxml==4.9.1
 Markdown==3.4.1
-MarkupSafe==2.1.1
 matplotlib==3.5.2
 matplotlib-inline==0.1.3
-mistune==0.8.4
-multitasking==0.0.11
-munch==2.5.0
-nbclient==0.6.6
-nbconvert==6.5.0
-nbformat==5.4.0
-nest-asyncio==1.5.5
-notebook==6.4.12
-numpy @ file:///C:/Users/Unknown/pipwin/numpy-1.22.4%2Bvanilla-cp310-cp310-win_amd64.whl
-oauthlib==3.2.0
-opt-einsum==3.3.0
-packaging==21.3
+numpy==1.23.1
 pandas==1.4.3
-pandocfilters==1.5.0
-parso==0.8.3
-pickleshare==0.7.5
-Pillow==9.2.0
-pipwin==0.5.2
-platformdirs==2.5.2
-plotly==5.9.0
-prometheus-client==0.14.1
-prompt-toolkit==3.0.30
-protobuf==3.19.4
-psutil==5.9.1
-pure-eval==0.2.2
-pyarrow==8.0.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycparser==2.21
-pydeck==0.7.1
-Pygments==2.12.0
-pyjsparser==2.7.1
-Pympler==1.0.1
-pyparsing==3.0.9
-PyPrind==2.11.3
-pyproj @ file:///C:/Users/Unknown/pipwin/pyproj-3.3.1-cp310-cp310-win_amd64.whl
-pyrsistent==0.18.1
-pySmartDL==1.3.4
-python-dateutil==2.8.2
-pytz==2022.1
-pytz-deprecation-shim==0.1.0.post0
-pywin32==304
-pywinpty==2.0.6
-pyzmq==23.2.0
-qtconsole==5.3.1
-QtPy==2.1.0
-requests==2.28.1
-requests-oauthlib==1.3.1
-rich==12.5.1
-rsa==4.8
-Rtree @ file:///C:/Users/Unknown/pipwin/Rtree-1.0.0-cp310-cp310-win_amd64.whl
 scikit-learn==1.1.1
-scipy==1.8.1
 seaborn==0.11.2
-semver==2.13.0
-Send2Trash==1.8.0
-Shapely @ file:///C:/Users/Unknown/pipwin/Shapely-1.8.2-cp310-cp310-win_amd64.whl
-six==1.16.0
-smmap==5.0.0
-soupsieve==2.3.2.post1
-stack-data==0.3.0
 streamlit==1.11.0
 streamlit-option-menu==0.3.2
-tabulate==0.8.10
-tenacity==8.0.1
-tensorboard==2.9.1
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.1
-tensorflow==2.9.1
-tensorflow-estimator==2.9.0
-tensorflow-io-gcs-filesystem==0.26.0
-termcolor==1.1.0
-terminado==0.15.0
-threadpoolctl==3.1.0
-tinycss2==1.1.1
-toml==0.10.2
-toolz==0.12.0
-tornado==6.2
-traitlets==5.3.0
-typing_extensions==4.3.0
-tzdata==2022.1
-tzlocal==4.2
-urllib3==1.26.10
-validators==0.20.0
-virtualenv==20.15.1
-watchdog==2.1.9
-wcwidth==0.2.5
-webencodings==0.5.1
-Werkzeug==2.1.2
-widgetsnbextension==3.6.1
-wrapt==1.14.1
-xgboost==1.6.1
-yellowbrick==1.4
-yfinance==0.1.74
-zipp==3.8.1
